// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectHeader /> should render with error: Project header error 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-item"
  >
    <h6
      aria-label="Project with id projectIdTest has not been found"
      class="MuiTypography-root MuiTypography-h6 MuiTypography-colorTextPrimary"
      data-testid="project-overview-error"
    >
      This project has not been found. Please select another one.
    </h6>
  </div>
</DocumentFragment>
`;

exports[`<ProjectHeader /> should render without error when there are less than 6 users: Project Header loaded 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-space-between MuiGrid-grid-xs-12"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-sm-8"
    >
      <h6
        aria-label="Project name: THE TEST PROJECT"
        class="MuiTypography-root makeStyles-projectTitle-154 MuiTypography-h6 MuiTypography-colorTextPrimary"
        data-testid="project-name"
      >
        THE TEST PROJECT
      </h6>
      <div
        class="MuiAvatarGroup-root"
      >
        <div
          class="MuiAvatar-root MuiAvatar-circle MuiAvatarGroup-avatar makeStyles-avatar-151"
          data-testid="user-avatar"
          style="z-index: 1;"
          title="Test user"
        >
          <img
            alt="Test user"
            class="MuiAvatar-img"
            src="Test Avatar Url"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-flex-end MuiGrid-grid-sm-4"
    >
      <p
        class="MuiTypography-root makeStyles-fullPathLabel-155 MuiTypography-body1 MuiTypography-colorTextPrimary"
      >
        Full path:
      </p>
      <p
        aria-label="Full path: /test/project"
        class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
        data-testid="full-path"
      >
        /test/project
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<ProjectHeader /> should render without error when there are less than 6 users: Project Header loading 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-item"
  >
    <div
      aria-label="Project overview is loading"
      class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
      data-testid="project-overview-loading"
      role="progressbar"
      style="width: 40px; height: 40px;"
    >
      <svg
        class="MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
          cx="44"
          cy="44"
          fill="none"
          r="20.2"
          stroke-width="3.6"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<ProjectHeader /> should render without error when there are more than 5 users: Project header with user dialog open 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-space-between MuiGrid-grid-xs-12"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-sm-8"
    >
      <h6
        aria-label="Project name: THE TEST PROJECT"
        class="MuiTypography-root makeStyles-projectTitle-339 MuiTypography-h6 MuiTypography-colorTextPrimary"
        data-testid="project-name"
      >
        THE TEST PROJECT
      </h6>
      <div
        class="MuiAvatarGroup-root"
      >
        <div
          class="makeStyles-avatarWrapper-337 MuiAvatarGroup-avatar"
          style="z-index: 1;"
        >
          <div
            class="MuiAvatar-root MuiAvatar-circle makeStyles-avatar-336"
            data-testid="user-avatar"
            title="name0"
          >
            <img
              alt="name0"
              class="MuiAvatar-img"
              src="avatarUrl0"
            />
          </div>
          <div
            class="MuiAvatar-root MuiAvatar-circle makeStyles-avatar-336"
            data-testid="user-avatar"
            title="name1"
          >
            <img
              alt="name1"
              class="MuiAvatar-img"
              src="avatarUrl1"
            />
          </div>
          <div
            class="MuiAvatar-root MuiAvatar-circle makeStyles-avatar-336"
            data-testid="user-avatar"
            title="name2"
          >
            <img
              alt="name2"
              class="MuiAvatar-img"
              src="avatarUrl2"
            />
          </div>
          <div
            class="MuiAvatar-root MuiAvatar-circle makeStyles-avatar-336"
            data-testid="user-avatar"
            title="name3"
          >
            <img
              alt="name3"
              class="MuiAvatar-img"
              src="avatarUrl3"
            />
          </div>
          <div
            class="MuiAvatar-root MuiAvatar-circle makeStyles-avatar-336"
            data-testid="user-avatar"
            title="name4"
          >
            <img
              alt="name4"
              class="MuiAvatar-img"
              src="avatarUrl4"
            />
          </div>
          <div
            aria-label="Open project users dialog"
            class="MuiAvatar-root MuiAvatar-circle makeStyles-avatar-336 makeStyles-seeMore-338 MuiAvatar-colorDefault"
            data-testid="avatar-open-dialog"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextPrimary"
            >
              +1
            </h6>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-flex-end MuiGrid-grid-sm-4"
    >
      <p
        class="MuiTypography-root makeStyles-fullPathLabel-340 MuiTypography-body1 MuiTypography-colorTextPrimary"
      >
        Full path:
      </p>
      <p
        aria-label="Full path: /test/project"
        class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
        data-testid="full-path"
      >
        /test/project
      </p>
    </div>
  </div>
</DocumentFragment>
`;
